--- a/environment.yml
+++ b/environment.yml
@@ -3,228 +3,20 @@ channels:
 - conda-forge
 - pytorch
 dependencies:
-- anyio=4.2.0=pyhd8ed1ab_0
-- appnope=0.1.3=pyhd8ed1ab_0
-- argon2-cffi=23.1.0=pyhd8ed1ab_0
-- argon2-cffi-bindings=21.2.0=py311h2725bcf_4
-- arrow=1.3.0=pyhd8ed1ab_0
-- asttokens=2.4.1=pyhd8ed1ab_0
-- async-lru=2.0.4=pyhd8ed1ab_0
-- atk-1.0=2.38.0=h1d18e73_1
-- attrs=23.2.0=pyh71513ae_0
-- babel=2.14.0=pyhd8ed1ab_0
-- beautifulsoup4=4.12.3=pyha770c72_0
-- blas=2.120=mkl
-- blas-devel=3.9.0=20_osx64_mkl
-- bleach=6.1.0=pyhd8ed1ab_0
-- brotli=1.1.0=h0dc2134_1
-- brotli-bin=1.1.0=h0dc2134_1
-- brotli-python=1.1.0=py311hdf8f085_1
-- bzip2=1.0.8=h10d778d_5
-- ca-certificates=2024.2.2=h8857fd0_0
-- cached-property=1.5.2=hd8ed1ab_1
-- cached_property=1.5.2=pyha770c72_1
-- cairo=1.18.0=h99e66fa_0
-- certifi=2024.2.2=pyhd8ed1ab_0
-- cffi=1.16.0=py311hc0b63fd_0
-- charset-normalizer=3.3.2=pyhd8ed1ab_0
-- click=8.1.7=unix_pyh707e725_0
-- colorama=0.4.6=pyhd8ed1ab_0
-- comm=0.2.1=pyhd8ed1ab_0
-- contourpy=1.2.0=py311h7bea37d_0
-- cpuonly=2.0=0
-- cycler=0.12.1=pyhd8ed1ab_0
-- debugpy=1.8.0=py311hdf8f085_1
-- decorator=5.1.1=pyhd8ed1ab_0
-- defusedxml=0.7.1=pyhd8ed1ab_0
-- entrypoints=0.4=pyhd8ed1ab_0
-- exceptiongroup=1.2.0=pyhd8ed1ab_2
-- executing=2.0.1=pyhd8ed1ab_0
-- expat=2.5.0=hf0c8a7f_1
-- filelock=3.13.1=pyhd8ed1ab_0
-- font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-- font-ttf-inconsolata=3.000=h77eed37_0
-- font-ttf-source-code-pro=2.038=h77eed37_0
-- font-ttf-ubuntu=0.83=h77eed37_1
-- fontconfig=2.14.2=h5bb23bf_0
-- fonts-conda-ecosystem=1=0
-- fonts-conda-forge=1=0
-- fonttools=4.49.0=py311he705e18_0
-- fqdn=1.5.1=pyhd8ed1ab_0
-- freetype=2.12.1=h60636b9_2
-- fribidi=1.0.10=hbcb3906_0
-- gdk-pixbuf=2.42.10=hbb5a27d_4
-- gettext=0.21.1=h8a4c099_0
-- gmp=6.3.0=h93d8f39_0
-- gmpy2=2.1.2=py311hc5b4402_1
-- graphite2=1.3.13=h12caacf_1001
-- gtk2=2.24.33=h8ca4665_3
-- harfbuzz=8.3.0=hf45c392_0
-- icu=73.2=hf5e326d_0
-- idna=3.6=pyhd8ed1ab_0
-- importlib-metadata=7.0.1=pyha770c72_0
-- importlib_metadata=7.0.1=hd8ed1ab_0
-- importlib_resources=6.1.1=pyhd8ed1ab_0
-- interrogate=1.5.0=pyhd8ed1ab_0
-- ipykernel=6.29.0=pyh3cd1d5f_0
-- ipython=8.20.0=pyh707e725_0
-- ipywidgets=8.1.1=pyhd8ed1ab_0
-- isoduration=20.11.0=pyhd8ed1ab_0
-- jedi=0.19.1=pyhd8ed1ab_0
-- jinja2=3.1.3=pyhd8ed1ab_0
-- json5=0.9.14=pyhd8ed1ab_0
-- jsonpointer=2.4=py311h6eed73b_3
-- jsonschema=4.21.1=pyhd8ed1ab_0
-- jsonschema-specifications=2023.12.1=pyhd8ed1ab_0
-- jsonschema-with-format-nongpl=4.21.1=pyhd8ed1ab_0
-- jupyter=1.0.0=pyhd8ed1ab_10
-- jupyter-lsp=2.2.2=pyhd8ed1ab_0
-- jupyter_client=8.6.0=pyhd8ed1ab_0
-- jupyter_console=6.6.3=pyhd8ed1ab_0
-- jupyter_core=5.7.1=py311h6eed73b_0
-- jupyter_events=0.9.0=pyhd8ed1ab_0
-- jupyter_server=2.12.5=pyhd8ed1ab_0
-- jupyter_server_terminals=0.5.2=pyhd8ed1ab_0
-- jupyterlab=4.0.11=pyhd8ed1ab_0
-- jupyterlab_pygments=0.3.0=pyhd8ed1ab_0
-- jupyterlab_server=2.25.2=pyhd8ed1ab_0
-- jupyterlab_widgets=3.0.9=pyhd8ed1ab_0
-- kiwisolver=1.4.5=py311h5fe6e05_1
-- lcms2=2.16=ha2f27b4_0
-- lerc=4.0.0=hb486fe8_0
-- libblas=3.9.0=20_osx64_mkl
-- libbrotlicommon=1.1.0=h0dc2134_1
-- libbrotlidec=1.1.0=h0dc2134_1
-- libbrotlienc=1.1.0=h0dc2134_1
-- libcblas=3.9.0=20_osx64_mkl
-- libcxx=16.0.6=hd57cbcb_0
-- libdeflate=1.19=ha4e1b8e_0
-- libexpat=2.5.0=hf0c8a7f_1
-- libffi=3.4.2=h0d85af4_5
-- libgfortran=5.0.0=13_2_0_h97931a8_2
-- libgfortran5=13.2.0=h2873a65_2
-- libglib=2.78.3=h198397b_0
-- libhwloc=2.9.3=default_h961836e_1009
-- libiconv=1.17=hd75f5a5_2
-- libjpeg-turbo=3.0.0=h0dc2134_1
-- liblapack=3.9.0=20_osx64_mkl
-- liblapacke=3.9.0=20_osx64_mkl
-- libpng=1.6.39=ha978bb4_0
-- libsodium=1.0.18=hbcb3906_1
-- libsqlite=3.44.2=h92b6c6a_0
-- libtiff=4.6.0=h684deea_2
-- libwebp-base=1.3.2=h0dc2134_0
-- libxcb=1.15=hb7f2c08_0
-- libxml2=2.12.5=hc0ae0f7_0
-- libzlib=1.2.13=h8a1eda9_5
-- llvm-openmp=17.0.6=hb6ac08f_0
-- markupsafe=2.1.5=py311he705e18_0
-- matplotlib=3.8.3=py311h6eed73b_0
-- matplotlib-base=3.8.3=py311h6ff1f5f_0
-- matplotlib-inline=0.1.6=pyhd8ed1ab_0
-- mistune=3.0.2=pyhd8ed1ab_0
-- mkl=2023.2.0=h54c2260_50500
-- mkl-devel=2023.2.0=h694c41f_50500
-- mkl-include=2023.2.0=h6bab518_50500
-- mpc=1.3.1=h81bd1dd_0
-- mpfr=4.2.1=h0c69b56_0
-- mpmath=1.3.0=pyhd8ed1ab_0
-- munkres=1.1.4=pyh9f0ad1d_0
-- nbclient=0.8.0=pyhd8ed1ab_0
-- nbconvert=7.14.2=pyhd8ed1ab_0
-- nbconvert-core=7.14.2=pyhd8ed1ab_0
-- nbconvert-pandoc=7.14.2=pyhd8ed1ab_0
-- nbformat=5.9.2=pyhd8ed1ab_0
-- ncurses=6.4=h93d8f39_2
-- nest-asyncio=1.6.0=pyhd8ed1ab_0
-- networkx=3.2.1=pyhd8ed1ab_0
-- notebook=7.0.7=pyhd8ed1ab_0
-- notebook-shim=0.2.3=pyhd8ed1ab_0
-- numpy=1.26.3=py311hc43a94b_0
-- openjpeg=2.5.0=ha4da562_3
-- openssl=3.2.1=hd75f5a5_0
-- overrides=7.7.0=pyhd8ed1ab_0
-- packaging=23.2=pyhd8ed1ab_0
-- pandoc=3.1.3=h9d075a6_0
-- pandocfilters=1.5.0=pyhd8ed1ab_0
-- pango=1.50.14=h19c1c8a_2
-- parso=0.8.3=pyhd8ed1ab_0
-- pcre2=10.42=h0ad2156_0
-- pexpect=4.9.0=pyhd8ed1ab_0
-- pickleshare=0.7.5=py_1003
-- pillow=10.2.0=py311hea5c87a_0
-- pip=23.3.2=pyhd8ed1ab_0
-- pixman=0.43.2=h73e2aa4_0
-- pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
-- platformdirs=4.1.0=pyhd8ed1ab_0
-- prometheus_client=0.19.0=pyhd8ed1ab_0
-- prompt-toolkit=3.0.42=pyha770c72_0
-- prompt_toolkit=3.0.42=hd8ed1ab_0
-- psutil=5.9.8=py311he705e18_0
-- pthread-stubs=0.4=hc929b4f_1001
-- ptyprocess=0.7.0=pyhd3deb0d_0
-- pure_eval=0.2.2=pyhd8ed1ab_0
-- py=1.11.0=pyh6c4a22f_0
-- pycparser=2.21=pyhd8ed1ab_0
-- pygments=2.17.2=pyhd8ed1ab_0
-- pyobjc-core=10.1=py311h9b70068_0
-- pyobjc-framework-cocoa=10.1=py311h9b70068_0
-- pyparsing=3.1.2=pyhd8ed1ab_0
-- pysocks=1.7.1=pyha2e5f31_6
-- python=3.11.7=h9f0c242_1_cpython
-- python-dateutil=2.8.2=pyhd8ed1ab_0
-- python-fastjsonschema=2.19.1=pyhd8ed1ab_0
-- python-json-logger=2.0.7=pyhd8ed1ab_0
-- python_abi=3.11=4_cp311
-- pytorch=2.2.0=py3.11_0
-- pytorch-mutex=1.0=cpu
-- pytz=2023.4=pyhd8ed1ab_0
-- pyyaml=6.0.1=py311h2725bcf_1
-- pyzmq=25.1.2=py311h889d6d6_0
-- qtconsole-base=5.5.1=pyha770c72_0
-- qtpy=2.4.1=pyhd8ed1ab_0
-- readline=8.2=h9e318b2_1
-- referencing=0.32.1=pyhd8ed1ab_0
-- requests=2.31.0=pyhd8ed1ab_0
-- rfc3339-validator=0.1.4=pyhd8ed1ab_0
-- rfc3986-validator=0.1.1=pyh9f0ad1d_0
-- rpds-py=0.17.1=py311h5e0f0e4_0
-- scipy=1.12.0=py311h86d0cd9_2
-- send2trash=1.8.2=pyhd1c38e8_0
-- setuptools=69.0.3=pyhd8ed1ab_0
-- six=1.16.0=pyh6c4a22f_0
-- sniffio=1.3.0=pyhd8ed1ab_0
-- soupsieve=2.5=pyhd8ed1ab_1
-- stack_data=0.6.2=pyhd8ed1ab_0
-- sympy=1.12=pypyh9d50eac_103
-- tabulate=0.9.0=pyhd8ed1ab_1
-- tbb=2021.11.0=h7728843_1
-- terminado=0.18.0=pyh31c8845_0
-- tinycss2=1.2.1=pyhd8ed1ab_0
-- tk=8.6.13=h1abcd95_1
-- toml=0.10.2=pyhd8ed1ab_0
-- tomli=2.0.1=pyhd8ed1ab_0
-- tornado=6.3.3=py311h2725bcf_1
-- traitlets=5.14.1=pyhd8ed1ab_0
-- types-python-dateutil=2.8.19.20240106=pyhd8ed1ab_0
-- typing-extensions=4.9.0=hd8ed1ab_0
-- typing_extensions=4.9.0=pyha770c72_0
-- typing_utils=0.1.0=pyhd8ed1ab_0
-- tzdata=2023d=h0c530f3_0
-- uri-template=1.3.0=pyhd8ed1ab_0
-- urllib3=2.1.0=pyhd8ed1ab_0
-- wcwidth=0.2.13=pyhd8ed1ab_0
-- webcolors=1.13=pyhd8ed1ab_0
-- webencodings=0.5.1=pyhd8ed1ab_2
-- websocket-client=1.7.0=pyhd8ed1ab_0
-- wheel=0.42.0=pyhd8ed1ab_0
-- widgetsnbextension=4.0.9=pyhd8ed1ab_0
-- xorg-libxau=1.0.11=h0dc2134_0
-- xorg-libxdmcp=1.1.3=h35c211d_0
-- xz=5.2.6=h775f41a_0
-- yaml=0.2.5=h0d85af4_2
-- zeromq=4.3.5=h93d8f39_0
-- zipp=3.17.0=pyhd8ed1ab_0
-- zlib=1.2.13=h8a1eda9_5
-- zstd=1.5.5=h829000d_0
-
+- ca-certificates
+- certifi
+- cpuonly
+- interrogate
+- ipykernel
+- ipywidgets
+- jinja2
+- jupyter
+- jupyterlab
+- matplotlib
+- notebook
+- numpy
+- openssl
+- python=3.11.7
+- pytorch
+- scipy
+- setuptools
